Overflow fix

--- a/assets/themes/saffron/css/less/app.less
+++ b/assets/themes/saffron/css/less/app.less
@@ -78,7 +78,7 @@ grunt watch
 ******************************************************************************/
 // --- Structure ---
 
-body {}
+body {overflow-x: hidden;}
 
 //Sticky Footer
 html, body {height: 100%;}
@@ -358,7 +358,7 @@ p {margin-bottom: @line-height-base;}
 		padding-right: @grid-gutter-width / 2;
 	
 
-	.col {
+	.micro-sm-col {
 		padding: 0;
 		@media (max-width: 379px) {
 			width: 100%;
